tests/snapshots/ProcTranslator__tests__tests__ast@classes.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", tree)"
---
AST {
    node: File,
    children: [
        AST {
            node: Class {
                name: "Node",
            },
            children: [
                AST {
                    node: Declaration {
                        typ: Int,
                        name: "counter",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "5",
                            },
                        ),
                    },
                    children: [],
                },
                AST {
                    node: Callable {
                        result_type: Int,
                        name: "Increment",
                        arguments: [],
                    },
                    children: [
                        AST {
                            node: Return {
                                value: Some(
                                    Increment {
                                        typ: (),
                                        expression: Field {
                                            typ: (),
                                            object: This {
                                                typ: (),
                                            },
                                            name: "counter",
                                        },
                                        postfix: true,
                                    },
                                ),
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
        AST {
            node: Class {
                name: "App",
            },
            children: [
                AST {
                    node: Callable {
                        result_type: Void,
                        name: "Main",
                        arguments: [],
                    },
                    children: [
                        AST {
                            node: Declaration {
                                typ: Class(
                                    "Node",
                                ),
                                name: "node",
                                expression: Some(
                                    New {
                                        typ: (),
                                        class_name: "Node",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AST {
                            node: Expression {
                                expression: MethodCall {
                                    typ: (),
                                    object: Variable {
                                        typ: (),
                                        name: "node",
                                    },
                                    name: "Increment",
                                    arguments: [],
                                },
                            },
                            children: [],
                        },
                        AST {
                            node: Expression {
                                expression: MethodCall {
                                    typ: (),
                                    object: Variable {
                                        typ: (),
                                        name: "node",
                                    },
                                    name: "Increment",
                                    arguments: [],
                                },
                            },
                            children: [],
                        },
                        AST {
                            node: Return {
                                value: None,
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
