tests/snapshots/ProcTranslator__tests__tests__correct_cfg@return.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", cfg)"
---
ControlFlowGraph {
    blocks: [
        BasicBlock {
            id: 0,
            instructions: [
                LoadParam {
                    dest: Register(
                        0,
                    ),
                    index: 0,
                },
                LoadConst {
                    dest: Register(
                        1,
                    ),
                    value: "false",
                },
            ],
            terminator: Some(
                Branch {
                    condition: Value(
                        Register(
                            1,
                        ),
                    ),
                    true_block: 1,
                    false_block: 2,
                },
            ),
            predecessors: [],
            successors: [
                1,
                2,
            ],
        },
        BasicBlock {
            id: 1,
            instructions: [],
            terminator: Some(
                Return(
                    None,
                ),
            ),
            predecessors: [
                0,
            ],
            successors: [],
        },
        BasicBlock {
            id: 2,
            instructions: [
                LoadConst {
                    dest: Register(
                        2,
                    ),
                    value: "false",
                },
            ],
            terminator: Some(
                Branch {
                    condition: Value(
                        Register(
                            2,
                        ),
                    ),
                    true_block: 3,
                    false_block: 4,
                },
            ),
            predecessors: [
                0,
            ],
            successors: [
                3,
                4,
            ],
        },
        BasicBlock {
            id: 3,
            instructions: [],
            terminator: Some(
                Return(
                    None,
                ),
            ),
            predecessors: [
                2,
            ],
            successors: [],
        },
        BasicBlock {
            id: 4,
            instructions: [],
            terminator: Some(
                Return(
                    None,
                ),
            ),
            predecessors: [
                2,
            ],
            successors: [],
        },
    ],
    entry_block: 0,
}
