tests/snapshots/ProcTranslator__tests__tests__correct_cfg@scopes.snap
---
source: src/tests.rs
expression: cfg.to_dot()
---
digraph CFG {
  rankdir=TB;
  node [shape=box, fontname="Courier"];
  edge [fontname="Courier"];

  B0 [label="{B0|r0 = param[0]\lalloc s0\lr1 = param[1]\ls0 = r1\lr2 = load s0\lr3 = const 5\lr4 = r2 Plus r3\lreturn r4\l}"];
  B1 [label="{B1|r5 = param[0]\lalloc s1\lr6 = const 0\ls1 = r6\lalloc s2\lr7 = const 1\ls2 = r7\lr8 = load s1\lr9 = load s2\lr10 = r8 Greater r9\lbranch r10 ? B2 : B3\l}"];
  B2 [label="{B2|r11 = load s1\lr12 = const 1\lr13 = r11 Plus r12\lr14 = load s2\lr15 = r13 Greater r14\lbranch r15 ? B4 : B5\l}"];
  B3 [label="{B3|r16 = load s1\lr17 = load s2\lr18 = r16 Less r17\lbranch r18 ? B7 : B8\l}"];
  B4 [label="{B4|jump B5\l}"];
  B5 [label="{B5|jump B6\l}"];
  B6 [label="{B6|jump B3\l}"];
  B7 [label="{B7|jump B8\l}"];
  B8 [label="{B8|jump B9\l}"];
  B9 [label="{B9|jump B10\l}"];
  B10 [label="{B10|jump B11\l}"];
  B11 [label="{B11|r19 = const true\lbranch r19 ? B12 : B13\l}"];
  B12 [label="{B12|r20 = load s1\lr21 = const 9\lr22 = r20 Equal r21\lbranch r22 ? B14 : B15\l}"];
  B13 [label="{B13|alloc s3\lr32 = const 2\ls3 = r32\ljump B20\l}"];
  B14 [label="{B14|r23 = load s1\lr24 = r23 Plus \"1\"\ls1 = r24\ljump B15\l}"];
  B15 [label="{B15|r25 = load s1\lr26 = const 10\lr27 = r25 Equal r26\lbranch r27 ? B16 : B17\l}"];
  B16 [label="{B16|jump B13\l}"];
  B17 [label="{B17|jump B18\l}"];
  B18 [label="{B18|jump B19\l}"];
  B19 [label="{B19|r28 = load s1\lr29 = const 1\lr30 = r28 Plus r29\lr31 = call B0(r5, r30)\ls1 = r31\ljump B11\l}"];
  B20 [label="{B20|r33 = load s3\lr34 = const 10\lr35 = r33 Less r34\lbranch r35 ? B21 : B22\l}"];
  B21 [label="{B21|r36 = load s1\lr37 = const 2\lr38 = r36 AssignAdd r37\lr39 = load s3\lr40 = r39 Plus \"1\"\ls3 = r40\ljump B20\l}"];
  B22 [label="{B22|return\l}"];
  B1 -> B2 [label="true"];
  B1 -> B3 [label="false"];
  B2 -> B4 [label="true"];
  B2 -> B5 [label="false"];
  B3 -> B7 [label="true"];
  B3 -> B8 [label="false"];
  B4 -> B5;
  B5 -> B6;
  B6 -> B3;
  B7 -> B8;
  B8 -> B9;
  B9 -> B10;
  B10 -> B11;
  B11 -> B12 [label="true"];
  B11 -> B13 [label="false"];
  B12 -> B14 [label="true"];
  B12 -> B15 [label="false"];
  B13 -> B20;
  B14 -> B15;
  B15 -> B16 [label="true"];
  B15 -> B17 [label="false"];
  B16 -> B13;
  B17 -> B18;
  B18 -> B19;
  B19 -> B11;
  B20 -> B21 [label="true"];
  B20 -> B22 [label="false"];
  B21 -> B20;
  B1 [style=filled, fillcolor=lightgreen];
}
