tests/snapshots/ProcTranslator__tests__tests__incorrect_error@return.snap
---
source: src/tests.rs
expression: error
---
Not all code paths return a value in function 'Main'
